[package]
name = "shaderpad"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = { version = "0.34.0", features = ["glutin"] }
glutin = "0.31"
glutin-winit = "0.4.2"
imgui = "0.12.0"
imgui-glium-renderer = "0.12.0"
imgui-winit-support = "0.12.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
